gen/v24.1/properties/pages/deprecated/partials/deprecated-properties.adoc

== Configuration properties

This is an exhaustive list of all the deprecated properties.

=== Broker properties

- coproc_supervisor_server

- dashboard_dir

- enable_central_config

=== Cluster properties

- cloud_storage_max_materialized_segments_per_shard

- cloud_storage_max_partition_readers_per_shard

- cloud_storage_reconciliation_ms

- coproc_max_batch_size

- coproc_max_inflight_bytes

- coproc_max_ingest_bytes

- coproc_offset_flush_interval_ms

- enable_admin_api

- enable_auto_rebalance_on_node_add

- enable_coproc

- full_raft_configuration_recovery_pattern

- health_monitor_tick_interval

- id_allocator_replication

- max_version

- min_version

- partition_autobalancing_movement_batch_size_bytes

- raft_flush_timer_interval_ms

- rm_violation_recovery_policy

- seed_server_meta_topic_partitions

- seq_table_min_size

- tm_violation_recovery_policy

- transaction_coordinator_replication

- tx_registry_log_capacity

- tx_registry_sync_timeout_ms

- use_scheduling_groups

